// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper Text Component should render a default helper text 1`] = `
<span
  class="sc-bdvvtL cGBAKA"
  data-testid="helper-text-component-test"
>
  Help text goes here
</span>
`;

exports[`Helper Text Component should render a error helper text 1`] = `
<span
  class="sc-bdvvtL sc-gsDKAQ cGBAKA gBhPfx"
  data-testid="helper-text-component-test"
>
  Error text goes here
</span>
`;
